adding new styles code

--- a/aboutus.html
+++ b/aboutus.html
@@ -67,7 +67,7 @@
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav font-weight-bold font-weight-bold-sec-cont mx-auto py-0">
                     <a href="index.html" class="nav-item nav-link ">Home</a>
-                    <a href="aboutus.html" class="nav-item nav-link ">About Us</a>
+                    <a href="aboutus.html" class="nav-item nav-link active">About Us</a>
 
 
                     <a href="./institutes.html" class="nav-item nav-link ">For Institutes</a>
@@ -75,7 +75,7 @@
                     <!-- <a href="#Features" class="nav-item nav-link active">Features</a>
           <a href="#HowitWorks" class="nav-item nav-link active">How it Works</a> -->
                     <!-- <a href="#Benefits" class="nav-item nav-link active">Benefits</a> -->
-                    <a href="contactus.html" class="nav-item nav-link active">Contact Us</a>
+                    <a href="contactus.html" class="nav-item nav-link ">Contact Us</a>
                 </div>
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
@@ -118,8 +118,9 @@
     <!-- Header Start -->
     <div class="contact-us-section">
         <div class="contact-us-section-con">
-            <div class="contact-us-section-con-left">
-                <h5>About Us</h5>
+            <div class="contact-us-section-con-left1">
+                <img src="./newimg/How Deltape Works Step 1.png" />
+                <!-- <h5>About Us</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
                 <ul>
                     <li> <span> <img src="./imgnew/basil_location-outline.png" /> </span>No. 256, 10th Main, 1st
@@ -127,11 +128,21 @@
                         Karnataka</li>
                     <li><span> <img src="./imgnew/material-symbols_mail-outline.png" /> </span>contact@deltape.in</li>
                     <li><span> <img src="./imgnew/tdesign_call-1.png" /> </span>+91 805 080 7711</li>
-                </ul>
+                </ul> -->
 
             </div>
-            <div class="contact-us-section-right">
-                <h3>Request A Demo</h3>
+            <div class="contact-us-section-right1">
+                <h5>
+                    About Us
+                </h5>
+                <h2>About Us Deltape</h2>
+                <p>At Deltape, we believe in pushing boundaries and delivering solutions that drive real impact. Founded
+                    on the principles of innovation, integrity, and customer-centricity, our mission is to empower
+                    businesses and individuals through cutting-edge products and personalized services.</p>
+                <p>What started as a small idea has grown into a trusted brand known for quality, creativity, and a
+                    commitment to excellence. Our team of passionate experts works tirelessly to ensure that every
+                    project we undertake meets the highest standards and exceeds expectations.</p>
+                <!-- <h3>Request A Demo</h3>
                 <p>We are here for you! How can we help?</p>
                 <div class="form-sec-new-sec-all-contact">
                     <div>
@@ -160,7 +171,7 @@
                 <div>
                     <a href="https://calendly.com/contact-deltape/30min" target="_blank"
                         class="btn btn-primary mt-1 py-3 px-5">Book Demo</a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
