--- a/parents.html
+++ b/parents.html
@@ -141,7 +141,7 @@
         <div class="Our-Solutions-con">
             <div class="Our-Solutions-con1">
                 <div class="Solutions-con1-left">
-                    <img class="desktop-img-view" src="./imgnew/Group 1707479869.png" />
+                    <img class="desktop-img-view" src="./imgnew/Deltape Zero.png" />
                 </div>
                 <div class="Solutions-con1-right">
                     <h4>Delta Zero</h4>
@@ -182,13 +182,13 @@
 
                 </div>
                 <div class="Solutions-con1-left">
-                    <img class="desktop-img-view" src="./imgnew/image 122.png" />
+                    <img class="desktop-img-view" src="./imgnew/Delta Auto.png" />
                 </div>
 
             </div>
             <div class="Our-Solutions-con1">
                 <div class="Solutions-con1-left">
-                    <img class="desktop-img-view" src="./imgnew/image 123.png" />
+                    <img class="desktop-img-view" src="./imgnew/Deltape Pay.png" />
                 </div>
                 <div class="Solutions-con1-right">
                     <h4>Delta Pay</h4>
